correct homepage for github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calculateur-demenagement",
-  "homepage": "https://github.com/samyferhat/calculateur-demenagement",
+  "homepage": "https://samyferhat.github.io/calculateur-demenagement",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
